feat: Deploy to GitHub (#4)

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -17,17 +17,20 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Run build
-        uses: area44/workflows/astro@v2.1.0
+      - name: Set base environment variable
+        run: echo "BASE=/${{ github.event.repository.name }}/" >> $GITHUB_ENV
 
-  # deploy:
-  #   needs: build
-  #   if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-  #   runs-on: ubuntu-latest
-  #   environment:
-  #     name: github-pages
-  #     url: ${{ steps.deployment.outputs.page_url }}
-  #   steps:
-  #     - name: Deploy to GitHub Pages
-  #       id: deployment
-  #       uses: actions/deploy-pages@v4
+      - name: Run build
+        uses: area44/workflows/vite@v2.1.0
+
+  deploy:
+    needs: build
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
