fix: update gradient definitions and adjust text colors in App component chore: update TypeScript target and library versions in configuration files chore: disable GitHub integration in Vercel configuration

--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
   "buildCommand": "tsc -b && vite build",
   "outputDirectory": "dist",
   "github": {
-    "enabled": true,
+    "enabled": false,
     "autoJobCancelation": true
   }
 }
