--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "format": "biome format --write",
-    "lint": "biome lint --write",
-    "check": "biome check --write"
+    "lint": "oxlint -c oxlintrc.jsonc",
+    "format": "oxfmt -c oxfmtrc.jsonc",
+    "check": "oxlint -c oxlintrc.jsonc && oxfmt -c oxfmtrc.jsonc"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.16",
@@ -20,11 +20,11 @@
     "vite": "npm:rolldown-vite@latest"
   },
   "devDependencies": {
-    "@area44/biome-config": "^2.3.1",
-    "@biomejs/biome": "^2.3.2",
     "@types/node": "^24.9.2",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
+    "oxfmt": "^0.11.0",
+    "oxlint": "^1.26.0",
     "typescript": "^5.9.3"
   }
 }
