--- a/vercel.json
+++ b/vercel.json
@@ -3,10 +3,9 @@
   "version": 2,
   "name": "@area44/vite-workspace",
   "framework": "vite",
-  "buildCommand": "tsc -b && vite build",
+  "buildCommand": "vite build",
   "outputDirectory": "dist",
   "github": {
-    "enabled": false,
     "autoJobCancelation": true
   }
 }
