--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,41 @@
 {
   "compilerOptions": {
+    /* Language & Environment */
     "target": "ESNext",
-    "useDefineForClassFields": true,
-    "module": "ESNext",
     "lib": ["ESNext", "DOM", "DOM.Iterable"],
-    "types": ["vite/client"],
-    "skipLibCheck": true,
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["./src/*"]
-    },
+    "module": "ESNext",
 
-    /* Bundler mode */
+    /* React JSX Settings */
+    "jsx": "react-jsx",
+
+    /* Bundler Mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
     "moduleDetection": "force",
     "noEmit": true,
 
-    /* Linting */
+    /* React Type Performance */
+    "jsxImportSource": "react",
+
+    /* Strictness & Linting */
     "strict": true,
+    "skipLibCheck": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
+    "erasableSyntaxOnly": true,
+
+    /* Path Aliases */
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    },
+
+    /* Type Declarations */
+    "types": ["vite/client"]
   },
+
   "include": ["src"]
 }
