--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tailwindcss": "^4.1.17",
-    "vite": "npm:rolldown-vite@latest"
+    "vite": "^8.0.0-beta.0"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
