chore(deps): update dependencies and configuration files

--- a/oxfmtrc.jsonc
+++ b/oxfmtrc.jsonc
@@ -12,4 +12,7 @@
     "**/.astro",
     "**/.netlify",
   ],
+  "experimentalTailwindcss": {
+    "functions": ["clsx", "cn", "cva", "tw"],
+  },
 }
