--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "oxlint -c oxlintrc.jsonc --fix",
-    "format": "oxfmt -c oxfmtrc.jsonc",
-    "check": "oxlint -c oxlintrc.jsonc --fix && oxfmt -c oxfmtrc.jsonc"
+    "lint": "oxlint",
+    "format": "oxfmt",
+    "check": "oxlint && oxfmt"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
@@ -17,10 +17,10 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "tailwindcss": "^4.1.18",
-    "vite": "^8.0.0-beta.7"
+    "vite": "8.0.0-beta.7"
   },
   "devDependencies": {
-    "@types/node": "^24.10.7",
+    "@types/node": "^25.0.6",
     "@types/react": "^19.2.8",
     "@types/react-dom": "^19.2.3",
     "oxfmt": "^0.23.0",
