--- a/oxfmtrc.jsonc
+++ b/oxfmtrc.jsonc
@@ -12,7 +12,23 @@
     "**/.astro",
     "**/.netlify",
   ],
+  "experimentalSortPackageJson": {
+    "sortScripts": true,
+  },
+  "experimentalSortImports": {
+    "groups": [
+      ["side-effect"],
+      ["builtin"],
+      ["external", "external-type"],
+      ["internal", "internal-type"],
+      ["parent", "parent-type"],
+      ["sibling", "sibling-type"],
+      ["index", "index-type"],
+    ],
+  },
   "experimentalTailwindcss": {
-    "functions": ["clsx", "cn", "cva", "tw"],
+    "stylesheet": "./src/index.css",
+    "attributes": ["class", "className"],
+    "functions": ["clsx", "cn", "cva", "tv"],
   },
 }
