feat: update oxc

--- a/.oxfmtrc.jsonc
+++ b/.oxfmtrc.jsonc
@@ -12,21 +12,21 @@
     "**/.astro",
     "**/.netlify",
   ],
-  "experimentalSortPackageJson": {
+  "sortPackageJson": {
     "sortScripts": true,
   },
-  "experimentalSortImports": {
+  "sortImports": {
     "groups": [
-      ["side-effect"],
-      ["builtin"],
-      ["external", "external-type"],
-      ["internal", "internal-type"],
-      ["parent", "parent-type"],
-      ["sibling", "sibling-type"],
-      ["index", "index-type"],
+      "type-import",
+      ["value-builtin", "value-external"],
+      "type-internal",
+      "value-internal",
+      ["type-parent", "type-sibling", "type-index"],
+      ["value-parent", "value-sibling", "value-index"],
+      "unknown",
     ],
   },
-  "experimentalTailwindcss": {
+  "sortTailwindcss": {
     "stylesheet": "./src/index.css",
     "attributes": ["class", "className"],
     "functions": ["clsx", "cn", "cva", "tv"],
